[gd_scene load_steps=3 format=3 uid="uid://dep5o5t6mvpbv"]

[ext_resource type="Theme" uid="uid://bfnahovc08m1s" path="res://assets/menu/theme_v0-0-2.tres" id="1_tn2uu"]
[ext_resource type="Script" path="res://scripts/custom_label.gd" id="2_ptjk7"]

[node name="RGB" type="Label"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -893.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_tn2uu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "

125 125 125"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
script = ExtResource("2_ptjk7")

[node name="HEX" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "GGDGGG"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="gui_input" from="HEX" to="." method="_on_hex_gui_input"]
[connection signal="mouse_entered" from="HEX" to="." method="_on_hex_mouse_entered"]
[connection signal="mouse_exited" from="HEX" to="." method="_on_hex_mouse_exited"]
[connection signal="ready" from="HEX" to="." method="_on_hex_ready"]
